static/css/bootstrap-subset.css
:root {
  --blue: #007bff;
  --indigo: #6610f2;
  --purple: #6f42c1;
  --pink: #e83e8c;
  --red: #dc3545;
  --orange: #fd7e14;
  --yellow: #ffc107;
  --green: #28a745;
  --teal: #20c997;
  --cyan: #17a2b8;
  --white: #fff;
  --gray: #6c757d;
  --gray-dark: #343a40;
  --primary: #007bff;
  --secondary: #6c757d;
  --success: #28a745;
  --info: #17a2b8;
  --warning: #ffc107;
  --danger: #dc3545;
  --light: #f8f9fa;
  --dark: #343a40;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
}

.col {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
}

body {
  margin: 0;
}

div {
  display: block;
}

footer {
  text-align: center;
  padding: 1rem;
  text-decoration: none;
}
html {
  min-height: 0vw;
  font-size: 1rem;

  line-height: 1.5;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}
a {
  color: #0056b3;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}
.navbar {
  padding-top: 1rem;
  text-align: center;
}
nav {
  position: relative;
  align-items: center;
  justify-content: flex-start;
  margin: 0;
}
.nav-link {
  padding: 0.5rem 0.5rem;
  font-size: 20px;
}

.jumbotron {
  padding: 3rem 1rem;
  background-image: url("https://d33wubrfki0l68.cloudfront.net/dd3f15bf8a1d94bdcaff3f3076e88ba34eb7fe55/4938b/static/img/map.jpg");
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  text-align: center;
  vertical-align: middle;
  color: white;
  margin-bottom: 0;
}

.jumbotron-fluid {
  padding-right: 0;
  padding-left: 0;
  border-radius: 0;
}
vgtitle {
  font-size: 10vmin;
  vertical-align: middle;
}

.ipa-pronunciation {
  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana,
    sans-serif;
}

button {
  border-radius: 0;
}

button:focus {
  outline: 1px dotted;
  outline: 5px auto -webkit-focus-ring-color;
}

button,
input,
optgroup,
select,
textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

button,
input {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

[type="button"]:not(:disabled),
[type="reset"]:not(:disabled),
[type="submit"]:not(:disabled),
button:not(:disabled) {
  cursor: pointer;
}

.container {
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
  max-width: 1140px;
}

.row {
  display: flex;
  flex-wrap: wrap;
  margin-right: -15px;
  margin-left: -15px;
}

article,
aside,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
pre {
  display: block;
}

figure {
  margin: 0 0 1rem;
  text-align: center;
}

.img-fluid {
  max-width: 100%;
  height: auto;
}

img {
  vertical-align: middle;
  border-style: none;
}

.mr-auto,
.mx-auto {
  margin-right: auto !important;
}

.ml-auto,
.mx-auto {
  margin-left: auto !important;
}

.col-md-8 {
  flex: 1 1 660px !important;
}

.col-md-4 {
  flex: 1 1 290px !important;
}

*,
::after,
::before {
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 0.5rem;
  font-weight: 500;
  line-height: 1.2;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.75rem;
}

p,
pre {
  margin-top: 0;
  margin-bottom: 1rem;
}

pre {
  margin-top: 0;
  margin-bottom: 1rem;
  overflow: auto;
  -ms-overflow-style: scrollbar;
  align-self: center;
}

dl,
ol,
ul {
  margin-top: 0;
  margin-bottom: 1rem;
}

.table-of-contents {
  padding: 0 !important;
  margin-bottom: 1rem;
}
.table-of-contents ul {
  margin-bottom: 0 !important;
}

